--- a/src/template/layout.ejs
+++ b/src/template/layout.ejs
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header class="w-full bg-blue-900 p-4 flex justify-between items-center text-white">
     <div class="flex items-center">
-      <img src="/static/logo.png" alt="Logo" class="w-8 h-8"/>
+      <img src="/images/logo.png" alt="Logo" class="w-8 h-8"/>
       <h1 class="text-lg font-bold pl-2">Inmersion Musical</h1>
     </div>
     <a href="/logout" class="bg-white text-blue-600 px-4 py-1 rounded">Salir</a>
