--- a/src/template/estCurso.ejs
+++ b/src/template/estCurso.ejs
@@ -100,7 +100,7 @@ document.addEventListener('DOMContentLoaded', () => {
         </button>
 
         <div class="flex items-center gap-3 pb-4">
-        <img src="/static/logo.png" alt="Logo" class="w-12 h-12">
+        <img src="/images/logo.png" alt="Logo" class="w-12 h-12">
         <h1 class="text-2xl sm:text-3xl font-bold text-sky-900">Registro de Estudiante</h1>
         </div>
         <p class="text-sm font-light text-gray-500 pb-4">Complete el formulario para registrar un estudiante.</p>
