Mejora en el reestablecimiento de contraseña y template de nuevo_password

--- a/src/template/nuevo_password.ejs
+++ b/src/template/nuevo_password.ejs
@@ -1,6 +1,70 @@
-<form action="/restablecer-password" method="POST">
-  <input type="hidden" name="token" value="<%= token %>" />
-  <label for="password">Nueva Contraseña:</label>
-  <input type="password" name="password" required />
-  <button type="submit">Cambiar Contraseña</button>
-</form>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" href="/images/logo.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Crear Nueva Contraseña</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section
+      class="min-h-screen flex items-center justify-center bg-gray-100 px-4 sm:px-6 lg:px-8"
+    >
+      <div
+        class="flex flex-col w-full max-w-md p-8 sm:p-10 lg:p-12 bg-white rounded-2xl shadow-xl"
+      >
+        <div class="flex items-center gap-3 pb-4">
+          <img src="/images/logo.png" alt="Logo" class="w-12 h-12" />
+          <h1 class="text-2xl sm:text-3xl font-bold text-sky-900">
+            Inmersión Musical
+          </h1>
+        </div>
+        <p class="text-sm font-light text-gray-500 pb-8">
+          Ingresa tu nueva contraseña para tu cuenta.
+        </p>
+        <form
+          action="/restablecer-password"
+          method="POST"
+          class="flex flex-col gap-6"
+        >
+          <input type="hidden" name="token" value="<%= token %>" />
+          <div>
+            <label
+              for="password"
+              class="block text-sm font-medium text-gray-700 text-sky-900"
+            >
+              Nueva Contraseña
+            </label>
+            <div class="relative">
+              <span
+                class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400 pr-5"
+              >
+                <i class="fa fa-lock"></i>
+              </span>
+              <input
+                type="password"
+                name="password"
+                id="password"
+                required
+                placeholder="********"
+                class="p-2 pl-10 w-full rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
+          </div>
+          <button
+            type="submit"
+            class="w-full text-white bg-indigo-600 hover:bg-indigo-700 focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-sm px-5 py-3 transition duration-150 ease-in-out"
+          >
+            Cambiar Contraseña
+          </button>
+        </form>
+      </div>
+    </section>
+  </body>
+</html>
