--- a/src/template/estudiante.ejs
+++ b/src/template/estudiante.ejs
@@ -1,64 +1,91 @@
 <main class="w-full max-w-md px-4 py-6">
-  <div class="bg-gradient-to-b from-cyan-500 to-blue-500 text-white h-2/6 p-4 rounded-lg shadow-md text-center">
+  <div
+    class="bg-gradient-to-b from-cyan-500 to-blue-500 text-white h-2/6 p-4 rounded-lg shadow-md text-center"
+  >
     <h2 class="text-3xl font-bold py-3">Hola, <%= estudiante.nombre %>!</h2>
     <p>Bienvenido a tu plataforma de Estudio</p>
   </div>
 
   <div class="grid grid-cols-2 gap-4 mt-6">
-    <% cursos.forEach(curso => { %>
-      <% if (curso.nombre !== 'publico') { %>
-        <div class="bg-gradient-to-b from-<%= curso.background %>-500 to-<%= curso.background %>-600 text-white p-6 rounded-lg text-center shadow-md">
-          <h3 class="text-3xl font-bold"><%= curso.num_estudiantes %></h3>
-          <p>Estudiantes de <%= curso.nombre %></p>
-        </div>
-      <% } %>
-    <% }) %>
+    <% cursos.forEach(curso => { %> <% if (curso.nombre !== 'publico') { %>
+    <div
+      class="bg-gradient-to-b from-<%= curso.background %>-500 to-<%= curso.background %>-600 text-white p-6 rounded-lg text-center shadow-md"
+    >
+      <h3 class="text-3xl font-bold"><%= curso.num_estudiantes %></h3>
+      <p>Estudiantes de <%= curso.nombre %></p>
+    </div>
+    <% } %> <% }) %>
   </div>
 
   <!-- Videos -->
   <section class="px-4 py-4">
-    <h2 class="text-lg font-bold mb-4 text-blue-900 text-center">Videos Demostrativos</h2>
+    <h2 class="text-lg font-bold mb-4 text-blue-900 text-center">
+      Videos Demostrativos
+    </h2>
     <div class="flex overflow-x-auto space-x-4 py-4">
       <% videos.forEach(video => { %>
-        <div class="flex-shrink-0 flex flex-col rounded w-80 bg-[#ffffff] shadow-xl">
-          <figure class="flex justify-center items-center overflow-hidden rounded-t">
-            <iframe width="560" height="315"
-              src="https://www.youtube.com/embed/<%= video.link %>"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
-          </figure>
-          <div class="flex flex-col p-8">
-            <div class="text-lg font-bold text-center text-[#374151] pb-6 font-mono"><%= video.titulo %></div>
-            <div class="text-base text-center text-[#374151] font-mono"><%= video.descripcion %></div>
+      <div
+        class="flex-shrink-0 flex flex-col rounded w-80 bg-[#ffffff] shadow-xl"
+      >
+        <figure
+          class="flex justify-center items-center overflow-hidden rounded-t"
+        >
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/<%= video.link %>"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
+          </iframe>
+        </figure>
+        <div class="flex flex-col p-8">
+          <div
+            class="text-lg font-bold text-center text-[#374151] pb-6 font-mono"
+          >
+            <%= video.titulo %>
+          </div>
+          <div class="text-base text-center text-[#374151] font-mono">
+            <%= video.descripcion %>
           </div>
         </div>
+      </div>
       <% }) %>
     </div>
   </section>
 
   <!-- Recursos -->
   <section class="px-4 py-4">
-    <h2 class="text-lg font-bold mb-4 text-blue-900 text-center">Recursos de Aprendizaje</h2>
+    <h2 class="text-lg font-bold mb-4 text-blue-900 text-center">
+      Recursos de Aprendizaje
+    </h2>
     <div class="flex flex-wrap gap-2">
       <% documentos.forEach(doc => { %>
-        <a class="bg-blue-950 text-white px-3 py-1 rounded-lg" href="/<%= doc.link %>" target="_blank">
-          <i class="fa-solid fa-download"></i> <%= doc.titulo %>
-        </a>
+      <a
+        class="bg-blue-950 text-white px-3 py-1 rounded-lg"
+        href="/<%= doc.link %>"
+        target="_blank"
+      >
+        <i class="fa-solid fa-download"></i> <%= doc.titulo %>
+      </a>
       <% }) %>
     </div>
   </section>
 
   <!-- Recomendaciones -->
   <section class="px-4 py-8">
-    <h2 class="text-lg font-bold mb-4 text-blue-900 text-center">Recomendaciones</h2>
+    <h2 class="text-lg font-bold mb-4 text-blue-900 text-center">
+      Recomendaciones
+    </h2>
     <div class="flex flex-wrap gap-4">
       <% recomendaciones.forEach(rec => { %>
-        <div class="bg-indigo-50 border-l-4 border-indigo-500 p-4 rounded-md shadow-sm w-full md:w-1/2 lg:w-1/3">
-          <p class="text-sm font-medium text-gray-700">Fecha: <%= rec.fecha %></p>
-          <p class="text-sm text-gray-600 mt-2"><%= rec.descripcion %></p>
-        </div>
+      <div
+        class="bg-indigo-50 border-l-4 border-indigo-500 p-4 rounded-md shadow-sm w-full md:w-1/2 lg:w-1/3"
+      >
+        <p class="text-sm font-medium text-gray-700">Fecha: <%= rec.fecha %></p>
+        <p class="text-sm text-gray-600 mt-2"><%= rec.descripcion %></p>
+      </div>
       <% }) %>
     </div>
   </section>
