:bug: corrigiendo el bug de restablecer contraseña

--- a/src/template/nuevo_password.ejs
+++ b/src/template/nuevo_password.ejs
@@ -29,7 +29,7 @@
           Ingresa tu nueva contraseña para tu cuenta.
         </p>
         <form
-          action="/restablecer-password"
+          action="/restablecer/restablecer-password"
           method="POST"
           class="flex flex-col gap-6"
         >
