--- a/src/template/restablecer.ejs
+++ b/src/template/restablecer.ejs
@@ -42,7 +42,7 @@
           Ir al inicio
         </a>
         <% } else { %>
-        <form method="POST" action="/enviar-reset" class="flex flex-col gap-6">
+        <form method="POST" action="/restablecer/enviar-reset" class="flex flex-col gap-6">
           <div>
             <label
               for="email"
